# mpdecimalpp

./: .gitignore  Makefile  Makefile.am  configure.ac  main.cpp  mpdecpp.cpp  mpdecpp.hpp
include/: mpdecpp.h
src/: mpdecpp.cpp
