#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([libmpdecimalpp], [0.0.0], [ash.hues@gmail.com])
AC_CONFIG_SRCDIR([src/config.h.in])
AC_CONFIG_HEADERS([src/config.h])
AM_INIT_AUTOMAKE([subdir-objects])

AM_PROG_LIBTOOL
AC_PROG_INSTALL

AC_ENABLE_SHARED
AC_DISABLE_STATIC
LT_INIT


# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
